Fix footer dark mode colors

--- a/src/App.scss
+++ b/src/App.scss
@@ -217,32 +217,32 @@ $dayBtn: #ecc91e;
     button {
       cursor: pointer;
       &:before {
-       background: none;
+        background: none;
       }
 
       &:after {
-       background: none;
+        background: none;
       }
 
-    &.confirmed {
-      background: #ff00002b;
-      color: #ff0e0e;
-    }
+      &.confirmed {
+        background: #ff00002b;
+        color: #ff0e0e;
+      }
 
-    &.active {
-      background: #ffa50026;
-      color: #f69f00;
-    }
+      &.active {
+        background: #ffa50026;
+        color: #f69f00;
+      }
 
-    &.recovered {
-      background: #4caa1d1f;
-      color: #459e19;
-    }
+      &.recovered {
+        background: #4caa1d1f;
+        color: #459e19;
+      }
 
-    &.deaths {
-      background: #0000005c;
-      color: #474747;
-    }
+      &.deaths {
+        background: #0000005c;
+        color: #474747;
+      }
     }
   }
 }
@@ -371,7 +371,7 @@ $primary-theme: #8ac6d1;
       background: rgb(71, 71, 71);
     }
   }
-  }
+}
 #range #range::-moz-range-track {
   width: 100%;
   height: 3px;
@@ -1081,6 +1081,14 @@ $dark-font: #c5c5c5;
     }
     a {
       color: $dark-font;
+    }
+  }
+
+  .footer {
+    background: #212121;
+    color: #ddd;
+    a {
+      color: #ddd;
     }
   }
 }
